<resources>
    <string name="app_name">AdvanceUS</string>
    <string name="action_settings">Settings</string>
    <string name="vschedule_empty_subheader">This allows you to schedule your vote and notify you the next polling event. To get started, tap the + button to create your first event. </string>
    <string name="schedule_vote_message">Schedule your vote using the time of vote and select a date. This will help us notify you of your next polling event. </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="county">County</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="party">Party</string>
    <string name="Register">Fill out your info to help us determine the voting status</string>
    <string name="notes_string_title">Notes</string>
    <string name="poll_string_title">Polling Location</string>
    <string name="news_details_string_title">News Details</string>
    <string name="candidate_details_string_title">Candidate Details</string>

</resources>
